--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restaurant",
   "version": "1.0.0",
   "description": "",
-  "main": "restaurant.js",
+  "main": "main.js",
   "scripts": {
     "test": "jest --watchAll"
   },
